# mgwr

./: .coverage  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  codecov.yml  pyproject.toml  readthedocs.yml  requirements.txt  requirements_tests.txt  setup.py
.ci/: 310.yaml  311-DEV.yaml  311.yaml  37.yaml  38.yaml  39-DEV.yaml  39.yaml
.github/workflows/: unittest.yml
ci/: 311-latest.yaml  311-oldest.yaml  312-latest.yaml  312-oldest.yaml  313-latest.yaml  314-dev.yaml  314-latest.yaml  314-min.yaml  314-numba-latest.yaml
datasets/: test_parallel.py
doc/: api.rst  conf.py  index.rst  installation.rst
doc/_static/: references.bib
gwr/: diagnostics.py  gwr.py  kernels.py  search.py  sel_bw.py
gwr/notebooks/: GWR_Georgia_Example-Copy1.ipynb  GWR_Georgia_Example-Copy2.ipynb  GWR_MGWR_Example.ipynb  GWR_MGWR_example.ipynb  SE_explorations.ipynb  Untitled.ipynb  Ziqi GWR - Benchmark.ipynb
gwr/notebooks/.ipynb_checkpoints/: GWR_Georgia_Example-Copy2-checkpoint.ipynb  GWR_MGWR_Example-checkpoint.ipynb  Untitled-checkpoint.ipynb
gwr/tests/: local_corr.csv  mgwr_example.p  test_gwr.py  test_kernels.py  test_sel_bw.py
mgwr/: __init__.py  diagnostics.py  gwr.py  kernels.py  search.py  sel_bw.py  summary.py  utils.py
mgwr/notebooks/: GWR_MGWR_example.ipynb  MGWR_Georgia_example.ipynb
mgwr/notebooks/.ipynb_checkpoints/: GWR_MGWR_example-checkpoint.ipynb
mgwr/tests/: __init__.py  georgia_mgwr_model_frame.csv  georgia_mgwr_param_frame.csv  test_gwr.py  test_kernels.py  test_parallel.py  test_sel_bw.py
notebooks/: Binomial_MGWR.ipynb  Binomial_MGWR_MonteCarlo_Results-we.ipynb  Binomial_MGWR_MonteCarlo_Results.ipynb  Binomial_MGWR_approaches_tried.ipynb  Binomial_MGWR_module_GAM.ipynb  Binomial_MGWR_univariate_check.ipynb  GWR_Georgia_example.ipynb  GWR_MGWR_Parallel_Example.ipynb  GWR_MGWR_example.ipynb  GWR_prediction_example.ipynb  MGWR_Georgia_example-Copy1.ipynb  MGWR_Georgia_example.ipynb  Poisson_MGWR.ipynb  Poisson_MGWR_MonteCarlo_Results.ipynb  Poisson_MGWR_univariate_check.ipynb  Real_data_example_Binomial-MGWR.ipynb  Real_data_example_Poisson-MGWR.ipynb  Simulated_data_example_Binomial-MGWR.ipynb  Simulated_data_example_Poisson-MGWR.ipynb
notebooks/.ipynb_checkpoints/: GWR_Georgia_example-checkpoint.ipynb  GWR_MGWR_example-checkpoint.ipynb  MGWR_Georgia_example-checkpoint.ipynb
notebooks/Binomial_MC_script_2/: main_mc.py  model_mc.py
notebooks/Binomial_MC_script_2/pkls/: results-0-50.pkl  results-50-100.pkl  (+18 more)
notebooks/Binomial_MC_script_we/: main_mc.py
notebooks/Poisson_MC_script/: f.py  f_2.py  main.py  main_mc.py
sources/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  references.html  search.html  searchindex.js
sources/.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  references.doctree
sources/_modules/: index.html
sources/_sources/: api.rst.txt  installation.rst.txt
sources/_static/: pysal-styles.css  references.bib
tools/: gitcount.ipynb
(+174 files in other folders)
